--- a/resume/index.html
+++ b/resume/index.html
@@ -1,1 +1,70 @@
+<!DOCTYPE html>
 
+
+<html>
+
+<head>
+
+<title>Michael Cooksey's Portfolio</title>
+
+
+
+
+
+</head>
+
+
+<body>
+
+<h1>Welcome to my Portfolio!</h1>
+
+<p>I'm Michael Cooksey and I'm a current student at Seminole State College working towards a Bachelor's in Programming. I have also graduated SSC with an Associates Degree. 
+<br>
+<strong>My goal is to become an animator or game designer in the future.</strong> My passion is drawing and making digital Illustrations. I've always had an affinity for technology and videogames. 
+</p>
+
+<h2>Skills</h2>
+
+<ul>
+  <li>Programming</li>
+  <li>HTML</li>
+  <li>Video</li>
+  <li>Storyboarding</li>
+  <li>Animation</li>
+  <li>Design</li>
+  <li>Drawing</li>
+  <li>Concept Art</li>
+  <li>Java</li>
+  <li>Unity</li>
+</ul>
+
+<h2>Software/Hardware</h2>
+
+<ul>
+  <li>Adobe Animate</li>
+  <li>Photoshop</li>
+  <li>Premiere Pro</li>
+  <li>Clip Studio</li>
+  <li>Maya</li>
+</ul>
+
+<h2>Social Media</h2>
+
+<ol>
+  <li><a href="https://theartofmichaelcooksey.myportfolio.com/digital-works">Art Portfolio</a></li>
+  <li><a href="https://github.com/michaelcooksey">Github Profile</a></li>
+  <li><a href="https://www.youtube.com/channel/UCmFHuTxoWTt9XdtAJirvsGQ?view_as=subscriber">Youtube Channel</a></li>
+</ol>
+
+
+<img src="Arleilah.jpg" width="300" height="300">
+<img src="Bucky_Painting.jpg" width="400" height="300">
+<img src="naked_snake_shadow.jpg" width="300" height="300">
+<img src="Beneath_the_Cherry_Blossoms.jpg" width="400" height="300">
+<img src="diamond_is_unbreakable_theboys.jpg" width="400" height="300">
+
+</body>
+
+
+
+</html>
