--- a/resume/index.html
+++ b/resume/index.html
@@ -57,11 +57,11 @@
 </ol>
 
 
-<img src="Arleilah.jpg" width="300" height="300">
-<img src="Bucky_Painting.jpg" width="400" height="300">
-<img src="naked_snake_shadow.jpg" width="300" height="300">
-<img src="Beneath_the_Cherry_Blossoms.jpg" width="400" height="300">
-<img src="diamond_is_unbreakable_theboys.jpg" width="400" height="300">
+<a href="https://theartofmichaelcooksey.myportfolio.com/digital-works"><img src="Arleilah.jpg" width="300" height="300"></a>
+<a href="https://theartofmichaelcooksey.myportfolio.com/digital-works"><img src="Bucky_Painting.jpg" width="400" height="300"></a>
+<a href="https://theartofmichaelcooksey.myportfolio.com/digital-works"><img src="naked_snake_shadow.jpg" width="300" height="300"></a>
+<a href="https://theartofmichaelcooksey.myportfolio.com/digital-works"><img src="Beneath_the_Cherry_Blossoms.jpg" width="400" height="300"></a>
+<a href="https://theartofmichaelcooksey.myportfolio.com/digital-works"><img src="diamond_is_unbreakable_theboys.jpg" width="400" height="300"></a>
 
 </body>
 
