--- a/blackgoose/index.html
+++ b/blackgoose/index.html
@@ -10,28 +10,9 @@
 
 <title>Black Goose Bistro</title>
 
-<style>
-body { 
-		background-color:#92CFF3;
-		margin:0 15%;
-		font-family:sans-serif;
-     }
-	 
-h1   { 
-		text-align: center;
-		font-family: serif;
-		font-weight: normal;
-		text-transform: uppercase;
-		border-bottom: 1px solid #57b1dc;
-		margin-top: 30px;
-	  }
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 
-h2    { 
-		color: #d1633c;
-		font-size: 1em;
-	  }
-	   
-</style>
+<link href="https://fonts.googleapis.com/css?family=Black+Han+Sans" rel="stylesheet">
 
 </head>
 
@@ -54,9 +35,9 @@ h2    {
 
 </nav>
 
-<h2>The Restaurant</h2>
+<h2 id= "restaurant">  The Restaurant</h2>
 
-<p>The Black Goose Bistro offers casual lunch and dinner fare in a hip atmosphere. The menu changes regularly to highlight the freshest ingredients.
+<p class="intro">The Black Goose Bistro offers casual lunch and dinner fare in a hip atmosphere. The menu changes regularly to highlight the freshest ingredients.
 </p>
 
 <h2>Catering</h2>
