--- a/blackgoose/contact.html
+++ b/blackgoose/contact.html
@@ -6,28 +6,7 @@
 
 <title>Contact</title>
 
-<style>
-body { 
-		background-color:#92CFF3;
-		margin:0 15%;
-		font-family:sans-serif;
-     }
-	 
-h1   { 
-		text-align: center;
-		font-family: serif;
-		font-weight: normal;
-		text-transform: uppercase;
-		border-bottom: 1px solid #57b1dc;
-		margin-top: 30px;
-	  }
-
-h2    { 
-		color: #d1633c;
-		font-size: 1em;
-	  }
-	   
-</style>
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 
 
 </head>
