--- a/resume/index.html
+++ b/resume/index.html
@@ -8,8 +8,9 @@
 <title>Michael Cooksey's Portfolio</title>
 
 
+<link rel="stylesheet" type="text/css" href="resume_style.css">
 
-
+<link href="https://fonts.googleapis.com/css?family=Black+Han+Sans" rel="stylesheet">
 
 </head>
 
@@ -56,12 +57,15 @@
   <li><a href="https://www.youtube.com/channel/UCmFHuTxoWTt9XdtAJirvsGQ?view_as=subscriber">Youtube Channel</a></li>
 </ol>
 
+<section>
 
 <a href="https://theartofmichaelcooksey.myportfolio.com/digital-works"><img src="Arleilah.jpg" width="300" height="300"></a>
 <a href="https://theartofmichaelcooksey.myportfolio.com/digital-works"><img src="Bucky_Painting.jpg" width="400" height="300"></a>
 <a href="https://theartofmichaelcooksey.myportfolio.com/digital-works"><img src="naked_snake_shadow.jpg" width="300" height="300"></a>
 <a href="https://theartofmichaelcooksey.myportfolio.com/digital-works"><img src="Beneath_the_Cherry_Blossoms.jpg" width="400" height="300"></a>
-<a href="https://theartofmichaelcooksey.myportfolio.com/digital-works"><img src="diamond_is_unbreakable_theboys.jpg" width="400" height="300"></a>
+<a href="https://theartofmichaelcooksey.myportfolio.com/digital-works"><img src="diamond_is_unbreakable_theboys.jpg" width="500" height="300"></a>
+
+</section>
 
 </body>
 
